--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --darkmagenta: #8B008B;
     --bg: #0a0a0a;
     --shadow: 0 2px 2px rgb(0 0 0 / 0.5);
+    --goldrod: 	#DAA520;
 }
 
 
@@ -19,7 +20,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(img/Prewed.jpg);
+    background-image: url(img/Tampilan_Awal.png);
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -35,11 +36,12 @@ body {
 .hero h1, 
 .hero h4, 
 .hero p {
+    color : var(--goldrod);
     text-shadow: var(--shadow);
 }
 
 .hero h1 {
-    font-family: 'Orbitron', cursive;
+    font-family: 'Norican', cursive;
     font-size: 6rem;
 }
 
@@ -54,14 +56,14 @@ body {
 }
 
 .hero a {
-    color: var(--darkmagenta);
+    color: var(--goldrod);
     background-color: white;
     box-shadow: var(--shadow);
 }
 
 
 .hero a:hover {
-    background-color: var(--darkmagenta);
+    background-color: var(--goldrod);
     color: white;
 }
 
@@ -78,7 +80,7 @@ body {
 
 .mynavbar .navbar-brand, 
 .mynavbar .offcanvas-title {
-    font-family: 'Orbitron', cursive;
+    font-family: 'Norican', cursive;
     font-size: 3.2rem;
     font-weight: bold;
 }
@@ -89,32 +91,33 @@ body {
 
 /* membuat ornamen buat di slide selajutnya */
 .home {
-    background-image: url(img/Acara\ Pernikahan.png);
+    background-image: white;
     background-size: cover;
     min-height: 100vh;
     margin-top: -6rem;
     padding-top: 15rem;
     padding-bottom: 5rem;
+    background-color: black;
 }
 
 
 /* tulisan bagian home */
 .home h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 5rem;
     font-weight: bold;
 }
 
 .home h3 {
-    color: #444;
+    color: white;
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
 .home p {
     font-size: 1.1rem;
-    color: #666;
+    color: white;
 }
 
 /* foto couple */
@@ -123,9 +126,9 @@ body {
 }
 
 .home .couple h3 {
-    font-family: 'Orbitron';
+    font-family: 'Norican';
     font-size: 2.4rem;
-    color: var(--darkmagenta);
+    color: var(--goldrod);
 }
 
 .home .couple img {
@@ -147,21 +150,35 @@ body {
 
 .home .heart i {
     margin: auto;
-    color: var(--darkmagenta);
+    color: var(--goldrod);
 }
 
 
 /* tulisan bagian info */
 .info {
-    background-color: var(--bg);
+    background-color: white;
     color: white;
     padding-top: 10rem;
     padding-bottom: 8rem;
 }
+.info p {
+    font-size: 1.1rem;
+    color: var(--goldrod);
+}
+
+.info a {
+    background-color: var(--goldrod);
+    color: white;
+}
+
+.info a:hover {
+    background-color: white;
+    color: var(--goldrod);
+}
 
 .info h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 5rem;
     font-weight: bold;
 }
@@ -176,13 +193,13 @@ body {
 }
 
 .info .card {
-    background-color: rgba(255, 255, 255, 0.2) !important;
+    background-color: #666 !important;
     color: white !important;
-    border: 1px solid #999;
+    border: 1px solid var(--goldrod);
 }
 
 .info .card-header {
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid var(--goldrod);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 }
@@ -192,29 +209,37 @@ body {
 }
 
 .info .card-footer{
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid var(--goldrod);
     font-size: 0.9rem;
     font-weight: 300;
 }
 
 
 /* tulisan bagian Story */
+.story {
+    background-image: black;
+    color: black;
+    padding-top: 8rem;
+    padding-bottom: 6rem;
+}
+
 .story h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 5rem;
     font-weight: bold;
 }
 
-.story {
-    padding-top: 10rem;
-    padding-bottom: 8rem;
-    background-image: url(img/Cerita\ Kami.jpg);
+.story h3 {
+    color: var(--goldrod);
+    font-weight: bold;
 }
+
 
 .story span {
     text-transform: uppercase;
-    color: #0a0a0a;
+    background-image: black;
+    color: var(--goldrod);
     font-size: 0.9rem;
     letter-spacing: 1px;
     display: block;
@@ -223,6 +248,7 @@ body {
 
 .story p {
     font-size: 1rem;
+    color: var(--goldrod);
     font-weight: 300;
 }
 
@@ -233,6 +259,7 @@ body {
     padding: 1.4rem 0;
     margin-top: 1rem;
     position: relative;
+    background-color: black;
 }
 
 .timeline::before {
@@ -241,7 +268,7 @@ body {
     bottom: 0;
     position: absolute;
     width: 1px;
-    background-color: #ccc;
+    background-color: var(--goldrod);
     left: 50%; /* udah pasti di tengah */
 }
 
@@ -329,8 +356,8 @@ body {
 
 /* tulisan bagian Gallery */
 .gallery h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 5rem;
     font-weight: bold;
 }
@@ -338,7 +365,7 @@ body {
 .gallery {
     padding-top: 10rem;
     padding-bottom: 8rem;
-    background-color: #f5f5f5;
+    background-color: white;
 }
 
 .gallery span {
@@ -358,8 +385,8 @@ body {
 
 /* tulisan bagian RSVP*/
 .rsvp h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 4.5rem;
     font-weight: bold;
 }
@@ -382,22 +409,22 @@ body {
 }
 
 .rsvp button {
-    background-color: var(--darkmagenta);
+    background-color: var(--goldrod);
     color: white;
-    border: 1px solid var(--darkmagenta);
+    border: 1px solid var(--goldrod);
 }
 
 .rsvp button:hover {
     background-color: white;
-    color: var(--darkmagenta);
+    color: var(--goldrod);
     border: 1px solid white;
 }
 
 
 /* tulisan bagian Gifts*/
 .gifts h2 {
-    color: var(--darkmagenta);
-    font-family: 'Orbitron';
+    color: var(--goldrod);
+    font-family: 'Norican';
     font-size: 4.5rem;
     font-weight: bold;
 }
@@ -427,7 +454,7 @@ body {
 /* Footer*/
 footer {
     padding: 5px;
-    background-color: var(--darkmagenta);
+    background-color: var(--goldrod);
     color: white;
 }
 
